--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html data-theme="light"></html> 
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://png.pngtree.com/png-vector/20191021/ourmid/pngtree-medical-logo-png-image_1770394.jpg" />
+    <link rel="icon" href="https://w7.pngwing.com/pngs/957/974/png-transparent-hospital-logo-clinic-health-care-physician-business.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -14,7 +14,7 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="https://png.pngtree.com/png-vector/20191021/ourmid/pngtree-medical-logo-png-image_1770394.jpg" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
